Data and Components correction 3

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <!-- Referencia a un doc sobre icono, color o informacion de quien lo creo -->
         <link rel="manifest" href="assets">
         <meta rel="description" content="Edgar Morales - BackEnd Developer">
-        <meta name="keywords" content="edgar, barajas, react, .net, .netcore, backend, developer,">
+        <meta name="keywords" content="edgar, react, .net, .netcore, backend, developer,">
         <!-- Meta tada twitter  -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@UbaldoMc">
