--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <title>
-            Edgar Morales - Portafolio
-        </title>
-        <meta name="viewport" 
-         content="with=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">  
-        <link rel="canonical" href="">
-        <meta name="author" content="Edgar Morales">
-        <!-- Referencia a un doc sobre icono, color o informacion de quien lo creo -->
-        <link rel="manifest" href="assets">
-        <meta rel="description" content="Edgar Morales - BackEnd Developer">
-        <meta name="keywords" content="edgar, react, .net, .netcore, backend, developer,">
-        <!-- Meta tada twitter  -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@UbaldoMc">
-        <meta name="twitter:title" content="Edgar Morales">
-        <meta name="twitter:description" content="Edgar Morales - BackEnd Developer">
-        <meta name="twitter:image" content="">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        
-         <!-- Meta tada Facebook  -->
-         <meta name="og:locate" content="en_US">
-         <meta name="og:type" content="website">
-         <meta name="og:title" content="Edgar Morales">
-         <meta name="og:description" content="Edgar Morales - BackEnd Developer">
-        <!-- Start of Async Drift Code -->
-<script>
-    "use strict";
-    
-    !function() {
-      var t = window.driftt = window.drift = window.driftt || [];
-      if (!t.init) {
-        if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-        t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-        t.factory = function(e) {
-          return function() {
-            var n = Array.prototype.slice.call(arguments);
-            return n.unshift(e), t.push(n), t;
-          };
-        }, t.methods.forEach(function(e) {
-          t[e] = t.factory(e);
-        }), t.load = function(t) {
-          var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-          o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-          var i = document.getElementsByTagName("script")[0];
-          i.parentNode.insertBefore(o, i);
-        };
-      }
-    }();
-    drift.SNIPPET_VERSION = '0.3.1';
-    drift.load('wt9h8ccgtk7x');
+  <head>
+    <meta charset="utf-8" />
+    <title>Edgar Morales - Portafolio</title>
+    <meta name="viewport" content="with=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="canonical" href="" />
+    <meta name="author" content="Edgar Morales" />
+    <!-- Referencia a un doc sobre icono, color o informacion de quien lo creo -->
+    <!-- <link rel="manifest" href="assets" /> -->
+    <meta rel="description" content="Edgar Morales - BackEnd Developer" />
+    <meta
+      name="keywords"
+      content="edgar, react, .net, .netcore, backend, developer,"
+    />
+    <!-- Meta tada twitter  -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@UbaldoMc" />
+    <meta name="twitter:title" content="Edgar Morales" />
+    <meta
+      name="twitter:description"
+      content="Edgar Morales - BackEnd Developer"
+    />
+    <meta name="twitter:image" content="https://twitter.com/devpowermx/photo" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!-- Meta tada Facebook  -->
+    <meta name="og:locate" content="en_US" />
+    <meta name="og:type" content="website" />
+    <meta name="og:title" content="Edgar Morales" />
+    <meta name="og:description" content="Edgar Morales - BackEnd Developer" />
+    <!-- Start of Async Drift Code -->
+    <script>
+      "use strict";
+
+      !(function () {
+        var t = (window.driftt = window.drift = window.driftt || []);
+        if (!t.init) {
+          if (t.invoked)
+            return void (
+              window.console &&
+              console.error &&
+              console.error("Drift snippet included twice.")
+            );
+          (t.invoked = !0),
+            (t.methods = [
+              "identify",
+              "config",
+              "track",
+              "reset",
+              "debug",
+              "show",
+              "ping",
+              "page",
+              "hide",
+              "off",
+              "on",
+            ]),
+            (t.factory = function (e) {
+              return function () {
+                var n = Array.prototype.slice.call(arguments);
+                return n.unshift(e), t.push(n), t;
+              };
+            }),
+            t.methods.forEach(function (e) {
+              t[e] = t.factory(e);
+            }),
+            (t.load = function (t) {
+              var e = 3e5,
+                n = Math.ceil(new Date() / e) * e,
+                o = document.createElement("script");
+              (o.type = "text/javascript"),
+                (o.async = !0),
+                (o.crossorigin = "anonymous"),
+                (o.src =
+                  "https://js.driftt.com/include/" + n + "/" + t + ".js");
+              var i = document.getElementsByTagName("script")[0];
+              i.parentNode.insertBefore(o, i);
+            });
+        }
+      })();
+      drift.SNIPPET_VERSION = "0.3.1";
+      drift.load("wt9h8ccgtk7x");
     </script>
     <!-- End of Async Drift Code -->
-
-
-    </head>
-    <body>
-        <div id="app">
-        </div>
-    </body>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
